Imager release history.  Older releases can be found in Changes.old

Imager 0.56 - 
===========

 - added support for reading 16-bit/sample PGM/PPM images

 - added support for writing 16-bit/sample PGM/PPM images

 - improved performance of reading PBM/PGM/PPM images

 - added support for writing PBM images if the image is paletted and
   contains only black and white

 - added a new make_colors value - "mono"

 - switched from the svn log Changes to a manual Changes to reduce
   noise

 - new sample code - samples/flasher.pl

Bug fixes:

 - CRITICAL: the "Imager" typemap entry (not used by Imager itself)
   was returning an image object with an extra reference, this
   resulted in a memory leak.
   http://rt.cpan.org/Ticket/Display.html?id=24992

 - fix rendering on alpha channel images for the FreeType 2.x driver
   http://rt.cpan.org/Ticket/Display.html?id=11972

 - reading bmp files now consitently handles short reads.  You can now
   supply a parameter to treat a short read as successful and set
   i_incomplete
   http://rt.cpan.org/Ticket/Display.html?id=8426

 - previously, reading ASCII PBM files required spaces between samples,
   even though the format doesn't require that

 - improved documentation of the unsharpmask filter (I hope)
   http://rt.cpan.org/Ticket/Display.html?id=25531

 - force flushing of the output from i_tt_dump_names() and test output
   in t/t35ttfont.t to prevent output from being mixed up.
   https://rt.cpan.org/Ticket/Display.html?id=24859

 - rewrite a conditional expression as an if() to hopefully work around
   a bug in the pre-4.0 GCC Apple shipped with OS X 10.4.
   https://rt.cpan.org/Ticket/Display.html?id=25561

 - avoid Data::Dumper in regops.perl to support older releases of perl
   https://rt.cpan.org/Ticket/Display.html?id=24391

Imager 0.55 - 16 Dec 2006
===========

This is primarily a bug fix release.

Note: Test::More is now a pre-requisite for Imager and is no longer bundled.

There is one new feature:
