@@ -1,6 +1,16 @@
 Imager release history.  Older releases can be found in Changes.old
 
-Imager 0.56 - 
+Imager 0.57 - 30 Apr 2007
+===========
+
+This is a maintenence release fixing a security issue in Imager.
+
+ - CRITICAL: a specially crafted compressed BMP file can cause a buffer
+   overflow in malloced memory.  There will be further discussion of
+   this issue in the ticket below.
+   http://rt.cpan.org/Ticket/Display.html?id=26811
+
+Imager 0.56 - 1 Apr 2007
 ===========
 
  - added support for reading 16-bit/sample PGM/PPM images
